# rlm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rlm_cli.md  rustqual.toml
.github/workflows/: ci.yml  release.yml
fixtures/malformed/: bad_go.go  bad_rust.rs
fixtures/markdown/: sample.md
src/: config.rs  config_path_tests.rs  config_tests.rs  error.rs  indexer.rs  lib.rs  main.rs  output.rs  output_format_tests.rs  output_tests.rs  setup.rs
src/application/: file_query.rs  mod.rs  session.rs  session_tests.rs
src/cli/: commands.rs  handlers.rs  handlers_util.rs  helpers.rs  mod.rs  output.rs
src/db/: connection.rs  connection_tests.rs  mod.rs  parser_version.rs  parser_version_tests.rs  queries.rs  schema.rs
src/domain/: chunk.rs  chunk_tests.rs  file.rs  file_tests.rs  ids.rs  mod.rs  reference.rs  savings.rs  savings_tests.rs  token_budget.rs  token_budget_tests.rs
src/edit/: inserter.rs  mod.rs  replacer.rs  syntax_guard.rs
src/indexer/: db_insert.rs  file_processing.rs  mod.rs  staleness.rs
src/infrastructure/: mod.rs
src/ingest/: dispatcher.rs  dispatcher_tests.rs  hasher.rs  hasher_tests.rs  lang_map.rs  lang_map_tests.rs  mod.rs  ref_extractor.rs  ref_extractor_tests.rs  scanner.rs  scanner_filter_tests.rs  scanner_tests.rs
src/interface/: mod.rs
src/mcp/: mod.rs  server.rs  server_helpers.rs  server_helpers_tests.rs  server_tests.rs  tool_handlers.rs  tool_handlers_edit.rs  tool_handlers_index.rs  tool_handlers_query.rs  tool_handlers_read.rs  tool_handlers_tests.rs  tool_handlers_util.rs  tools.rs
src/models/: chunk.rs  file.rs  mod.rs  token_estimate.rs
src/operations/: map.rs  (+22 more)
tests/: cli_mcp_parity_tests.rs  e2e_tests.rs  mcp_tests.rs  setup_tests.rs  staleness_tests.rs
(+240 files in other folders)
