[package]
name = "rlm"
version = "0.1.0"
edition = "2021"
description = "The Context Broker - semantic code exploration for AI agents"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SaschaOnTour/rlm"
keywords = ["cli", "code-analysis", "mcp", "ast", "semantic-search"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "rlm"
path = "src/main.rs"

[lib]
name = "rlm"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }

# MCP
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Parallelism
rayon = "1.10"

# File system
ignore = "0.4"

# Hashing
sha2 = "0.10"

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-python = "0.25"
tree-sitter-php = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# PDF
pdf-extract = "0.10"

# Regex
regex = "1.11"

# JSON Schema (re-exported by rmcp, no direct dependency needed)

# Logging (MCP server must log to stderr, not stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
